[package]
name = "ledgerr"
version = "0.1.0"
edition = "2021"

[dependencies]
toml    = {version = "0.8.19" } # Also being used for DateTime
colored = {version = "2.1.0"  , optional = true }
dirs    = {version = "5.0.1"  , optional = true }
serde   = {version = "1.0.215", features = ["derive"]}
chrono = "0.4.38"

[features]
build-binary = ["colored", "dirs"]

[lib]
name = "ledgerr"
path = "src/lib.rs"
doc = true
crate-type = ["lib"]

[[bin]]
name = "ledgerr_cmd"
path = "src/bin/bin.rs"
doc = false
required-features = ["build-binary"]
